tests/errors/surf_parse_15.experr
error: expected end of statement